게시물 유저 관계 설정, 게시물API설정, 유저API개발